# BittrexCrawler

./: .gitignore  .gitmodules  BittrexCrawler.py  README.md
cpp/: CMakeLists.txt
cpp/src/: BittrexCrawlerCpp.cpp  IMarketFields.cpp  IMarketFields.h  Market.cpp  Market.h  MongoEntry.cpp  MongoEntry.h  Stock.cpp  Stock.h  Subscriber.cpp  Subscriber.h
